--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title><%= productName %></title>
 
@@ -23,3 +23,4 @@
     <!-- quasar:entry-point -->
   </body>
 </html>
+html
