[MERCADOPAGO] create preference

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+  <script src="https://sdk.mercadopago.com/js/v2"></script>
   </head>
   <body>
     <!-- quasar:entry-point -->
