--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
-    <link rel="icon" type="image/png" sizes="128x128" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
-    <link rel="icon" type="image/ico" href="favicon.ico">
+    <link rel="icon" type="image/svg" sizes="128x128" href="/favicon.svg">
+    <link rel="icon" type="image/svg" sizes="96x96" href="/favicon.svg">
+    <link rel="icon" type="image/svg" sizes="32x32" href="/favicon.svg">
+    <link rel="icon" type="image/svg" sizes="16x16" href="/favicon.svg">
+    <link rel="icon" type="image/svg" href="favicon.svg">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
