--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title><%= productName %></title>
-
+    <title>Midnight Tickets - Bilheteria Online</title>
     <meta charset="utf-8">
-    <meta name="description" content="<%= productDescription %>">
+    <meta property="og:description" content="Com apenas 5% de taxa, a Midnight Tickets é a plataforma de bilheteria online que maximiza seus lucros na venda de ingressos digitais e otimiza o gerenciamento do seus eventos. Crie seu evento agora!">
+    <meta name="description" content="Com apenas 5% de taxa, a Midnight Tickets é a plataforma de bilheteria online que maximiza seus lucros na venda de ingressos digitais e otimiza o gerenciamento do seus eventos. Crie seu evento agora!">
+    <meta property="og:title" content="Midnight Tickets - Bilheteria Online">
+    <meta property="og:site_name" content="Midnight Tickets">
+    <meta property="og:url" content="https://midnightickets.com">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
